# pthreads-w32-cmake

./: CMakeLists.txt  pthreads-config.cmake.in
